# openni_server

./: .gitignore  CMakeLists.txt  StreamListener.cpp  client.html  client.js  device.cpp  error.cpp  header.h  main.cpp  openni_server.cpp  package-lock.json  package.json  sensor.cpp  status.cpp  stream.cpp  version.cpp
test/: client.html  client.js  host.js  index.html  index.js  package-lock.json  package.json
